--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "ejs": "^2.5.2",
     "express": "~4.14.0",
     "gulp": "^3.9.1",
