--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp": "^3.9.1",
     "mongoose": "^4.6.6",
     "morgan": "~1.7.0",
+    "nodemon": "^1.11.0",
     "serve-favicon": "~2.3.0"
   }
 }
